fix z-index for firefox colourbox

--- a/app/assets/stylesheets/colorbox.css.scss
+++ b/app/assets/stylesheets/colorbox.css.scss
@@ -15,7 +15,7 @@
     ordered & tabbed in a way that represents the nesting of the generated HTML.
 */
 .active-popup #cboxOverlay { height: 100%; width: 100%;position: fixed; top: 0; background-color: rgba(0,0,0,0.3); }
-#colorbox { outline:0; }
+#colorbox { outline:0; z-index: 9999; }
         .cboxIframe { background:#fff; }
         #cboxError { padding:50px; }
         #cboxLoadingGraphic { background:image-url("loading.gif") no-repeat center center; }
